--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     padding: 0;
-    border:0;
+    margin: 0;
     box-sizing: border-box;
 }
 .edit-container,.new-container{
@@ -8,4 +8,11 @@
     text-align: center;
     font-size: large;
     padding: 15px;
+}
+td{
+    padding: 10px;
+}
+table,th,td{
+    border-collapse: collapse;
+    border:1px solid grey !important;
 }
